# avendish-orbits

./: .gitmodules  CMakeLists.txt  config.cmake  dependencies.cmake
experiments/: nsphere-wanderer.js  wandering-tests.maxpat
helpfiles/: orbits-help.pd  orbits.maxhelp  orbits.maxhelp.maxhelp
src/: Model.cpp  Model.hpp  UI.hpp
